--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span><a href="#science">Science</a></span>
         </nav>
     </header>
-    <div id="content">
+    <div id="content" class="row">
         <div class="column large">
             <div id="lead">
                 <div class="image">
@@ -37,20 +37,24 @@
                     Nullam sit amet fringilla massa.</p>
             </div>
             <div class="row">
-                <div class="column">
-                    <h2>Orca Spends Vacation at Land World Puget</h2>
-                    <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. 
-                        Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante 
-                        accumsan...</p>
+                <div class="column" id="sub-1">
+                    <div class="substory">
+                        <h1>Orca Spends Vacation at Land World Puget</h1>
+                        <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. 
+                            Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante 
+                            accumsan...</p>
+                    </div>
                     <div class="image">
                         <h1>Earth Spins Backwards for 2017</h1>
                     </div>
                 </div>
-                <div class="column">
-                    <h2>Burger for Breakfast: How Early is too Early?</h2>
-                    <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. 
-                        Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent 
-                        eu nisl erat.</p>
+                <div class="column" id="sub-2">
+                    <div class="substory">
+                        <h1>Burger for Breakfast: How Early is too Early?</h1>
+                        <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. 
+                            Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent 
+                            eu nisl erat.</p>
+                    </div>
                     <div class="image">
                         <h1>Research Shows Cameras Erase Memory</h1>
                     </div>
@@ -58,7 +62,7 @@
             </div>
         </div>
         <div class="column medium">
-            <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+            <h1>FBI Finds Action Star Guilty of False Advertising</h1>
             <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae 
                 aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi 
                 venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi 
@@ -66,7 +70,7 @@
                 pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut 
                 ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum 
                 blandit aliquam felis...</p>
-            <div class="img">
+            <div class="image">
                 <h1>Cats in Control-Is It a Thing?</h1>
             </div>
             <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam 
