--- a/index.html
+++ b/index.html
@@ -92,5 +92,17 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div id="info">
+            <span id="info_span">My Times</span>
+            <nav>
+                <span><a href="#world">World</a></span>
+                <span><a href="#us">U.S.</a></span>
+                <span><a href="#tech">Tech</a></span>
+                <span><a href="#science">Science</a></span>
+            </nav>
+        </div>
+        <div id="copyright">© 2018, My Times (A Division of Kasei's bite)</div>
+    </footer>
 </body>
 </html>
